crates/backyard-parser/tests/snapshots/comment__after_block.snap
---
source: crates/backyard-parser/tests/comment.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: do_while
    condition:
      node_type: do_while_condition
      condition:
        node_type: boolean
        is_true: false
        loc:
          start:
            line: 4
            column: 6
            offset: 21
          end:
            line: 4
            column: 6
            offset: 21
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 4
          column: 0
          offset: 15
        end:
          line: 4
          column: 6
          offset: 21
      leadings: ~
      trailings: ~
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 3
          offset: 3
        end:
          line: 2
          column: 0
          offset: 5
      leadings: ~
      trailings:
        - node_type: comment_line
          comment: " test"
          loc:
            start:
              line: 3
              column: 0
              offset: 7
            end:
              line: 3
              column: 0
              offset: 7
          leadings: ~
          trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 4
        column: 11
        offset: 26
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 4
    column: 12
    offset: 27
leadings: ~
trailings: ~
