crates/backyard-parser/tests/snapshots/comment__at_statement_end.snap
---
source: crates/backyard-parser/tests/comment.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 97
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: ~
      trailings: ~
    operator:
      - 61
    right:
      node_type: number
      value:
        - 53
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 5
          offset: 5
      leadings: ~
      trailings:
        - node_type: comment_block
          comment:
            - 32
            - 116
            - 101
            - 115
            - 116
            - 32
          loc:
            start:
              line: 1
              column: 7
              offset: 7
            end:
              line: 1
              column: 7
              offset: 7
          leadings: ~
          trailings: ~
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 1
        column: 7
        offset: 7
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 17
    offset: 17
leadings: ~
trailings: ~
