crates/backyard-parser/tests/snapshots/comment__doc.snap
---
source: crates/backyard-parser/tests/comment.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: comment_doc
    comment: "\n * test\n "
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 0
        offset: 0
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 0
    offset: 0
leadings: ~
trailings: ~
